# leoblog

./: .gitignore  .gitmodules  Cargo.toml  config.toml  syndicate.sh
content/: 2021-01-23-test.md  _index.md  automatic-syndication-and-cross-platform-interactions-with-blogs.md  hsmusicifier-0-2-0-add-track-art-and-artist-info-to-your-homestuck-music-collection-in-any-format.md  hsmusicifier-0-3-0-split-up-bundled-albums-with-additional-flexibility-for-art.md  hsmusicifier-automatically-add-track-art-to-id3-tags-including-fan-anthologies-and-post-2019-bandcamp.md  indieweb.md  lorem_ipsum1.md  lorem_ipsum2.md  lorem_ipsum3.md  lorem_ipsum4.md  lorem_ipsum5.md  lorem_ipsum6.md  testing-2.md  trusting-ssh-keys-using-a-centralized-hardware-secret.md  welcome.md
sass/: _common.scss  dark.scss  light.scss  preview.scss
static/.well-known/: microsoft-identity-association.json
static/admin/: config.yml  index.html
templates/: index.html  page.html
