[package]
name = "leoblog"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
toml_edit = "0.2.0"
